<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Splashscreen"
    android:background="#cb202d">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_gravity="center_horizontal">

       <TextView
           android:id="@+id/txtView1"
           android:layout_marginTop="100sp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/zomato"
           android:textColor="@color/white"
           android:textSize="60sp"
           android:layout_gravity="center"
           />

       <TextView
           android:id="@+id/txtView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="15dp"
           android:layout_gravity="center"
           android:text="@string/_100_green_deliveries"
           android:textColor="@color/white"
           android:textSize="26sp" />

       <TextView
           android:id="@+id/txtView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"
           android:text="Carbon and Plastic Neutral &#xA;&#xA;&#xA; in India"
           android:textColor="#E1D9D1"
           android:textSize="16sp"
           tools:ignore="HardcodedText,TextContrastCheck" />

       <ImageView
           android:id="@+id/imageView"
           android:layout_width="wrap_content"
           android:layout_marginTop="10dp"
           android:layout_height="150sp"
           android:contentDescription="@string/globe_image"
           app:srcCompat="@drawable/planet_earth"
           tools:ignore="ImageContrastCheck" />



   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="0.2"
            android:contentDescription="@string/tree_iamge"
            android:scaleType="fitEnd"

            app:srcCompat="@drawable/tree"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="0.2"
            android:contentDescription="@string/tree_image"
            android:scaleType="fitEnd"

            app:srcCompat="@drawable/tree"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="0.2"
            android:contentDescription="@string/tree_image1"
            android:scaleType="fitEnd"

            app:srcCompat="@drawable/tree"
            tools:ignore="ImageContrastCheck" />


    </LinearLayout>




</LinearLayout>