<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context=".MainActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1"

    >

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="253dp"
        android:background="#ff3131"
        android:contentDescription="@string/zomato_home_logo"
        android:scaleType="fitXY"

        app:srcCompat="@drawable/zomatopic" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1">

    <TextView
        android:id="@+id/txtView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:text="@string/india_s_1_food_delivery_and_dining_app"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/log_in_or_sign_up"
        android:textColor="@color/material_dynamic_neutral40"
        android:textSize="18sp"

        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />


</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:orientation="horizontal">


    <com.hbb20.CountryCodePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp">

    </com.hbb20.CountryCodePicker>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="12"
        android:hint="@string/enter_mobile_number"
        android:inputType="phone"
        android:paddingEnd="60dp"
        tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck" />


</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn1"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="#FF3131"
        android:text="Continue"
        android:textSize="18sp"
        android:textColor="@color/white"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <TextView
        android:id="@+id/txtView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:textColor="@color/material_dynamic_neutral40"
        android:textSize="18sp"

        android:textStyle="bold" />




</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="125dp"
            android:layout_height="44dp"

            android:contentDescription="@string/zomato_home_logo"

            app:srcCompat="@drawable/google" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="123dp"
            android:layout_height="51dp"

            android:contentDescription="@string/zomato_home_logo"

            app:srcCompat="@drawable/threedots" />

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_gravity="bottom"

    >

    <TextView
        android:id="@+id/txtView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_continuing_you_agree_to_our"
        android:layout_gravity="center"
        android:textSize="14sp"
        />
    <TextView
        android:id="@+id/txtView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:text="@string/terms_of_service_privacy_policy_content_policies" />


</LinearLayout>


</LinearLayout>